@@ -8,16 +8,16 @@
 			{/players}
 		</select>
 	</form>
-
+	<div id="avatar">
+		<img src="./data/uploads/{name}.jpg" />
+	</div>
 	<div id="content-container">
-            
-            
-            <div id="buy-container">
-                <form autocomplete="off" method="post" action="portfolio/buy_cards">
-                    <input type="submit" value="Purchase Cards"/>
-                </form>
-                {buy_response}
-            </div> 
+		<div id="buy-container">
+			<form autocomplete="off" method="post" action="portfolio/buy_cards">
+				<input type="submit" value="Purchase Cards"/>
+			</form>
+			{buy_response}
+        </div> 
 
 		<div id="content-left">
 
