@@ -360,3 +360,9 @@ form input[type="text"], input[type="password"]
 {
 	color:red;
 }
+
+#avatar
+{
+	padding-left:25px;
+	padding-bottom: 25px;
+}
